# nft_meetup

./: .gitignore  README.md  main.py  metadata.py  metadata_all.py  pyproject.toml  requirements.txt  traits.py
.github/workflows/: main.yml
nft/: hardhat.config.js  package-lock.json  package.json
nft/contracts/: MyNFT.sol
