[tool.poetry]
name = "nft_meetup"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9.6"
Pillow = "^9.0.1"
ipython = "^8.0.1"
GitPython = "^3.1.26"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
icecream = "^2.1.1"
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
